<resources>
    <string name="app_name">Catalog Movie</string>
    <string name="list_genre">List Of Official Genres For Movies</string>
    <string name="movies">Movies</string>
    <string name="list_movie">List Movie</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="release_date">Release Date :</string>
    <string name="popularity">Popularity :</string>
    <string name="rating">Rating :</string>
    <string name="vote_count">Vote Count :</string>
    <string name="overview">Overview</string>
    <string name="strip">-</string>
    <string name="backdrop">Backdrop</string>
    <string name="information">Information</string>
    <string name="review">Reviews</string>
    <string name="trailer">Youtube Trailer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_review">Load Review</string>
</resources>